Login system implementations

--- a/MainWindow.axaml
+++ b/MainWindow.axaml
@@ -17,7 +17,9 @@
         </Grid.ColumnDefinitions>
 
         <!-- Navigation Panel (Left Side) -->
-    <Border Background="{DynamicResource PrimaryBackgroundGradient}" Padding="5, 5, 10, 5">   
+    <Border Background="{DynamicResource 
+    PrimaryBackgroundGradient}" Padding="5, 5, 10, 5"
+            BorderThickness="0, 0, 2, 0" BorderBrush="SlateGray">   
         <StackPanel Spacing="8">
             <Image Source="{SvgImage /Assets/Images/logo.svg}"></Image> 
                     
