--- a/Views/FirstView.axaml
+++ b/Views/FirstView.axaml
@@ -3,6 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Compass.Views">
     
+    <!--MAKE THIS THE DASHBOARD???? -->
+    
     
     <Grid>
         <StackPanel>
@@ -11,7 +13,7 @@
             </DockPanel>
         </StackPanel>
         
-        <Canvas MaxHeight="450">
+        <!--<Canvas MaxHeight="450">
             <Border Background="LightGray" CornerRadius="5" Padding="10" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                 <TextBlock Name="Generic" Text="Landing Page"/>
                 <Canvas.Left>10</Canvas.Left>
@@ -30,7 +32,18 @@
                 <Canvas.Right>10</Canvas.Right>
                 <Canvas.Top>110</Canvas.Top>
             </Border>
-        </Canvas>
+        </Canvas>-->
+        
+        <Border Background="LightGray" CornerRadius="5" Padding="10"
+                Width="300" Height="150" 
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center">
+            <TextBlock Name="Generic" Text="Landing Page"
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Center"
+                       FontSize="20"/>
+        </Border>
+        
     </Grid>    
     
     
