Sessions as a singleton implemented. User login now routes to Dashboard.

--- a/Views/LoginPage.axaml
+++ b/Views/LoginPage.axaml
@@ -20,6 +20,8 @@
                     
                     <TextBlock FontSize="22" FontWeight="Bold" Text="User Login" Margin="10" HorizontalAlignment="Center"/>
                     
+                    <TextBlock Name="ErrorTextBlock" Foreground="Red" HorizontalAlignment="Center"/>
+                    
                     <TextBlock FontWeight="Bold" Text="Email" Margin="5, 10, 5, 1"/>
                     <TextBox Name="EmailTextBox"/>
                     
@@ -27,13 +29,11 @@
                     <TextBox Name="PasswordBox" PasswordChar=""/>
                     
                     <Button Name="LoginButton" Content="Login" HorizontalAlignment="Center" Margin="15"></Button>
-                    
-                    <TextBlock Name="ErrorTextBlock" Foreground="Red" HorizontalAlignment="Center"/>
 
                         <!-- working on above for now -->
-                    <CheckBox HorizontalAlignment="Center" IsChecked="False"
+                    <!--<CheckBox Foreground="Black" HorizontalAlignment="Center" IsChecked="False"
                               Content="Remember me">
-                    </CheckBox>
+                    </CheckBox>-->
                     
                     <TextBlock HorizontalAlignment="Center" Text="Forgot your password? -">
                         <HyperlinkButton  Margin="-5, 5, 0, -7">Reset here</HyperlinkButton>
