--- a/Views/BannerTemplate.axaml
+++ b/Views/BannerTemplate.axaml
@@ -2,17 +2,27 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:vm="clr-namespace:Compass.ViewModels"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+             x:DataType="vm:DashboardViewModel"
              x:Class="Compass.Views.BannerTemplate">
     
 
         <Border Background="#222831" Height="115" BorderBrush="LightSlateGray" BorderThickness="0, 0, 0, 0" DockPanel.Dock="Top">
-            <TextBlock x:Name="TitleText"
+            <StackPanel>
+            <TextBlock Text="{Binding Role}"
+                       HorizontalAlignment="Right"
+                       VerticalAlignment="Top"
+                       Padding="0,30,20,0"
+                       Foreground="White"
+                       FontSize="14"/>
+            <TextBlock Text="{Binding FullName}"
                        HorizontalAlignment="Right"
                        VerticalAlignment="Center"
-                       Padding="10"
+                       Padding="0,0,20,0"
                        Foreground="White"
-                       FontSize="34"/>
+                       FontSize="26"/>
+            </StackPanel>
         </Border>
 
     
