--- a/Views/Dashboard.axaml
+++ b/Views/Dashboard.axaml
@@ -3,15 +3,36 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:local="clr-namespace:Compass.Views"
+             xmlns:vm="clr-namespace:Compass.ViewModels"
+             x:DataType="vm:DashboardViewModel"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Compass.Views.Dashboard">
     <StackPanel>
         <DockPanel>
             <local:BannerTemplate/>
         </DockPanel>
-        
-        <TextBlock Text="Dashboard"/>
- 
+        <Grid Margin="5">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"></RowDefinition>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            
+            <TextBlock Text="Dashboard"/>
+            
+            <Border Background="LightSteelBlue" Height="200" Width="250" CornerRadius="5" Margin="0,0,10,0" HorizontalAlignment="Right" Padding="5">
+                <Border.Effect>
+                    <DropShadowEffect BlurRadius="10" Opacity="0.4" Color="#222831"/>
+                </Border.Effect>
+                
+                <Border Background="#222831" Height="25" VerticalAlignment="Top" CornerRadius="5, 5, 0, 0">
+                    <TextBlock Text="Assigned Cases" FontSize="14" Foreground="WhiteSmoke" VerticalAlignment="Center" Padding="8,0,0,0"></TextBlock>
+                </Border>
+                
+            </Border>
+            
+        </Grid>
     </StackPanel>
 </UserControl>
 
