--- a/Views/Dashboard.axaml
+++ b/Views/Dashboard.axaml
@@ -19,7 +19,7 @@
                 <ColumnDefinition Width="*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
             
-            <TextBlock Text="Dashboard"/>
+            <!--<TextBlock Text="Dashboard"/>
             
             <Border Background="LightSteelBlue" Height="200" Width="250" CornerRadius="5" Margin="0,0,10,0" HorizontalAlignment="Right" Padding="5">
                 <Border.Effect>
@@ -29,8 +29,9 @@
                 <Border Background="#222831" Height="25" VerticalAlignment="Top" CornerRadius="5, 5, 0, 0">
                     <TextBlock Text="Assigned Cases" FontSize="14" Foreground="WhiteSmoke" VerticalAlignment="Center" Padding="8,0,0,0"></TextBlock>
                 </Border>
-                
-            </Border>
+            </Border>-->
+            
+            <StackPanel x:Name="ContainerPanel"/>
             
         </Grid>
     </StackPanel>
