--- a/Views/Dashboard.axaml
+++ b/Views/Dashboard.axaml
@@ -19,19 +19,27 @@
                 <ColumnDefinition Width="*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
             
-            <!--<TextBlock Text="Dashboard"/>
+            <TextBlock Text="Dashboard"/>
             
-            <Border Background="LightSteelBlue" Height="200" Width="250" CornerRadius="5" Margin="0,0,10,0" HorizontalAlignment="Right" Padding="5">
+            <Border Background="LightSteelBlue" CornerRadius="5" Margin="0,0,10,0" HorizontalAlignment="Right" Padding="0">
                 <Border.Effect>
                     <DropShadowEffect BlurRadius="10" Opacity="0.4" Color="#222831"/>
                 </Border.Effect>
                 
-                <Border Background="#222831" Height="25" VerticalAlignment="Top" CornerRadius="5, 5, 0, 0">
-                    <TextBlock Text="Assigned Cases" FontSize="14" Foreground="WhiteSmoke" VerticalAlignment="Center" Padding="8,0,0,0"></TextBlock>
-                </Border>
-            </Border>-->
+                <StackPanel>
+                    <Border Background="#222831" Height="25" VerticalAlignment="Top" CornerRadius="5, 5, 0, 0">
+                        <TextBlock Text="Assigned Cases" FontSize="14" Foreground="WhiteSmoke" VerticalAlignment="Center" Padding="8,0,0,0"></TextBlock>
+                    </Border>
+                    
+                    
+                    
+                    <ScrollViewer VerticalScrollBarVisibility="Auto">
+                        <StackPanel x:Name="ContainerPanel"/>
+                    </ScrollViewer>
+                </StackPanel>
+            </Border>
             
-            <StackPanel x:Name="ContainerPanel"/>
+            <!--<StackPanel x:Name="ContainerPanel"/>-->
             
         </Grid>
     </StackPanel>
