--- a/MainWindow.axaml
+++ b/MainWindow.axaml
@@ -2,6 +2,9 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:vm="clr-namespace:Compass.ViewModels"
+        xmlns:services="clr-namespace:Compass.Services"
+        x:DataType="vm:MainWindowViewModel"
         mc:Ignorable="d" d:DesignWidth="1200" d:DesignHeight="700"
         Width="1200" Height="700"
         x:Class="Compass.MainWindow"
@@ -25,11 +28,11 @@
                     
             <Button Content="Dashboard" HorizontalAlignment="Stretch" Click="Dashboard"></Button>
             <Button Content="Reporting" HorizontalAlignment="Stretch" Click="Reporting"></Button>
+            <Button Content="Add Staff" HorizontalAlignment="Stretch" Click="AddMember"></Button>
             <Button Content="..." HorizontalAlignment="Stretch"></Button>
             <Button Content="..." HorizontalAlignment="Stretch"></Button>
             <Button Content="..." HorizontalAlignment="Stretch"></Button>
-            <Button Content="..." HorizontalAlignment="Stretch"></Button>
-            <Button Content="Login" Click="LoginButton" ></Button>
+            <Button Content="Logout" Click="LogoutButton" IsVisible="{Binding isLoggedInCheck}"></Button>
 
         </StackPanel>
     </Border>    
