--- a/Views/Dashboard.axaml
+++ b/Views/Dashboard.axaml
@@ -8,9 +8,11 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Compass.Views.Dashboard">
     <StackPanel>
+        
         <DockPanel>
             <local:BannerTemplate/>
         </DockPanel>
+        
         <Grid Margin="5">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"></RowDefinition>
@@ -21,7 +23,7 @@
             
             <TextBlock Text="Dashboard"/>
             
-            <Border Background="LightSteelBlue" CornerRadius="5" Margin="0,0,10,0" HorizontalAlignment="Right" Padding="0">
+            <Border Background="LightSteelBlue" CornerRadius="5" Margin="0,0,10,0" HorizontalAlignment="Right" Padding="0" MaxHeight="500">
                 <Border.Effect>
                     <DropShadowEffect BlurRadius="10" Opacity="0.4" Color="#222831"/>
                 </Border.Effect>
