--- a/Views/Dashboard.axaml
+++ b/Views/Dashboard.axaml
@@ -21,9 +21,9 @@
                 <ColumnDefinition Width="*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
             
-            <TextBlock Text="Dashboard"/>
             
-            <Border Background="LightSteelBlue" CornerRadius="5" Margin="0,0,10,0" HorizontalAlignment="Right" Padding="0" MaxHeight="500">
+            
+            <Border Background="LightSteelBlue" CornerRadius="5" Margin="0,0,10,0" HorizontalAlignment="Left" Padding="0" MaxHeight="620">
                 <Border.Effect>
                     <DropShadowEffect BlurRadius="10" Opacity="0.4" Color="#222831"/>
                 </Border.Effect>
