--- a/Views/ReportsUC.axaml
+++ b/Views/ReportsUC.axaml
@@ -3,7 +3,7 @@
              xmlns:views="clr-namespace:Compass.Views;assembly=Compass"
              xmlns:vm="clr-namespace:Compass.ViewModels"
              x:DataType="vm:ReportsViewModel"
-             x:Class="Compass.Views.ReportsUserControl">
+             x:Class="Compass.Views.ReportsUC">
     
     <StackPanel>
         <ListBox ItemsSource="{Binding FullReport}" Margin="5" Background="LightSteelBlue" MaxHeight="494" Width="400" CornerRadius="5">
@@ -24,9 +24,12 @@
                                 <Button Content="->" FontSize="13" Margin="0,5,0,0" HorizontalAlignment="Right" MaxHeight="30" MaxWidth="30"/>
                             </StackPanel>
                             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                                
                                 <TextBlock Text="View Child Details" VerticalAlignment="Center" Margin="5,0,5,0"/>
+                                
                                 <Button Content="->" FontSize="13" Margin="0,5,0,0" HorizontalAlignment="Right" Height="30" Width="30"
-                                        Click="ViewChildDataClick" Tag="{Binding child_id}"/>
+                                        Click="LoadChildData" Tag="{Binding child_id}"/>
+                                
                             </StackPanel>
                             <Separator Margin="5, 10"/>
 
